src/objects/Customer_Services_Quality_Assurance__c.object
<CustomObject>
    <fields>
        <fullName>Did_the_POI_document_meet_critieria__c</fullName>
        <inlineHelpText>Did the POI document meet critieria?</inlineHelpText>
        <label>Did the POI document meet critieria?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_acknowledge_the_mistake__c</fullName>
        <inlineHelpText>Where necessary did the agent acknowledge the mistake/Zopa error to the customer
and offer an apology?</inlineHelpText>
        <label>Did the agent acknowledge the mistake</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_avoid_interrupting__c</fullName>
        <inlineHelpText>Did the agent avoid interrupting the customer allowing the customer to vent where applicable?</inlineHelpText>
        <label>Did the agent avoid interrupting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_avoid_offering_financial_a__c</fullName>
        <inlineHelpText>Did the agent avoid offering financial
advice to the customer?</inlineHelpText>
        <label>Agent avoided offering financial advice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_close_the_call_appropriate__c</fullName>
        <inlineHelpText>Did the agent close the call appropriately, offering
additional assistance where
appropriate?</inlineHelpText>
        <label>Did agent close the call appropriately</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_close_the_correspondence_a__c</fullName>
        <inlineHelpText>Did the agent close the correspondence appropriately by clearly stating the outcome of
complaint?</inlineHelpText>
        <label>Did agent suitably close correspondence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_identify_the_customer__c</fullName>
        <inlineHelpText>Did the agent successfully identify the customer? - Doesn’t send details about the account to an unauthorised person or replies to an unregistered email address.</inlineHelpText>
        <label>Did the agent identify the customer ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_mention_his_her_name_and__c</fullName>
        <inlineHelpText>Did the agent mention his/ her name and job title?</inlineHelpText>
        <label>Did the agent mention his/ her name/job</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_offer_appropriate_solution__c</fullName>
        <inlineHelpText>Did the agent offer the most appropriate solution to meet the customers’ needs?
Considering all the relevant factors of the case when offering remedies.</inlineHelpText>
        <label>Did the agent offer appropriate solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_provide_honest_explanation__c</fullName>
        <inlineHelpText>Did the agent provide honest, evidence-based explanations and giving reasons for decisions?</inlineHelpText>
        <label>Did the agent provide honest explanation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_refer_to_any_notes_account__c</fullName>
        <inlineHelpText>Did the agent refer to any notes/account details?</inlineHelpText>
        <label>Did the agent refer to any notes/account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_remain_impartial__c</fullName>
        <inlineHelpText>Did the agent remain impartial?</inlineHelpText>
        <label>Did the agent remain impartial?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_remain_professional_throug__c</fullName>
        <inlineHelpText>Did the agent remain professional throughout the call? - Was the agent&apos;s tone
understanding? - Did the agent sound clear and confident throughout the call?</inlineHelpText>
        <label>Did the agent remain professional ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_successfully_identify_the__c</fullName>
        <inlineHelpText>Did the agent successfully identify the Caller? - First and last name - DOB - First line of
address and postal code - Registered email address</inlineHelpText>
        <label>Did agent successfully identify caller</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_us_eective_questioning_ski__c</fullName>
        <inlineHelpText>Did the agent us effective questioning skills?</inlineHelpText>
        <label>Did the agent use effective questioning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_use_appropriate_greeti__c</fullName>
        <inlineHelpText>Did the agent use the appropriate greeting (Dear...) and salutation to address the complainant?</inlineHelpText>
        <label>Did the agent use appropriate greeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_use_the_correct_method_to__c</fullName>
        <inlineHelpText>Did the agent use the correct method to contact customer?</inlineHelpText>
        <label>Did the agent use correct contact method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_email_state_the_correct_document__c</fullName>
        <inlineHelpText>Did the email state the correct documents needed to satisfy the task?</inlineHelpText>
        <label>Did the email state correct documents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_email_state_why_the_documents_we__c</fullName>
        <inlineHelpText>Did the email state why the documents were unacceptable?</inlineHelpText>
        <label>Did email state why docs unacceptable ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_meets_the_task_criteria__c</fullName>
        <inlineHelpText>Document meets the task criteria</inlineHelpText>
        <label>Document meets the task criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_are_in_correct_format__c</fullName>
        <inlineHelpText>Documents are in correct format with correct information needed</inlineHelpText>
        <label>Documents are in correct format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_have_been_classified__c</fullName>
        <inlineHelpText>Documents have been classified</inlineHelpText>
        <label>Documents have been classified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_in_correct_format__c</fullName>
        <inlineHelpText>Documents are in the correct format with the correct information needed</inlineHelpText>
        <label>Documents in correct format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Don_t_interrupt_the_customer__c</fullName>
        <inlineHelpText>Don’t interrupt the customer or talk over them</inlineHelpText>
        <label>Don’t interrupt the customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Don_t_leave_long_pauses__c</fullName>
        <inlineHelpText>Don&apos;t leave long pauses and signpost them if they cannot be avoided.</inlineHelpText>
        <label>Don&apos;t leave long pauses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dont_interrupt_the_customer__c</fullName>
        <inlineHelpText>Don’t interrupt the customer or talk over them</inlineHelpText>
        <label>Don’t interrupt the customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_states_correct_documents_needed__c</fullName>
        <inlineHelpText>Email states correct documents needed to complete the task</inlineHelpText>
        <label>Email states correct documents needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_states_why_documents_unacceptable__c</fullName>
        <inlineHelpText>Email states why documents were unacceptable</inlineHelpText>
        <label>Email states why documents unacceptable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Establish_the_reason_for_the_call__c</fullName>
        <inlineHelpText>Establish the reason for the call</inlineHelpText>
        <label>Establish the reason for the call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Established_reason_for_the_call__c</fullName>
        <label>Established reason for the call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explain_how_to_take_actions_online__c</fullName>
        <inlineHelpText>Explain how to take actions online in the future</inlineHelpText>
        <label>Explain how to take actions online</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explain_the_importance_of_actions__c</fullName>
        <inlineHelpText>Explain the importance of actions to the customer.</inlineHelpText>
        <label>Explain the importance of actions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explain_the_reason_for_the_call__c</fullName>
        <inlineHelpText>Explain the reason for the call</inlineHelpText>
        <label>Explain the reason for the call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explanations_are_clear_and_in_sections__c</fullName>
        <inlineHelpText>Explanations are clear and delivered in sections</inlineHelpText>
        <label>Explanations are clear and in sections</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_documents_been_classified__c</fullName>
        <inlineHelpText>Have documents been classified</inlineHelpText>
        <label>Have documents been classified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identied_usable_bank_account_details__c</fullName>
        <inlineHelpText>Identified
usable bank account details (not business account/savings account or in
another name)</inlineHelpText>
        <label>Identified usable bank account details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiveChatCalcs__c</fullName>
        <formula>IF(ISPICKVAL(   Explanations_are_clear_and_in_sections__c , &quot;2&quot;),2, if(ispickval(  Explanations_are_clear_and_in_sections__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Provide_relevant_information__c  , &quot;2&quot;),2, if(ispickval( Provide_relevant_information__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Explain_the_importance_of_actions__c  ,  &quot;2&quot;),2, if(ispickval( Explain_the_importance_of_actions__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Provide_rationale_behind_why_we_require__c  ,  &quot;2&quot;),2, if(ispickval( Provide_rationale_behind_why_we_require__c , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Explain_how_to_take_actions_online__c  ,  &quot;2&quot;),2, if(ispickval( Explain_how_to_take_actions_online__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Use_correct_grammar_and_spelling__c  ,  &quot;2&quot;),2, if(ispickval( Use_correct_grammar_and_spelling__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Use_positive_and_professional_language__c  ,  &quot;2&quot;),2, if(ispickval( Use_positive_and_professional_language__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Use_appropriate_tone_of_voice__c,  &quot;2&quot;),2, if(ispickval( Use_appropriate_tone_of_voice__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  React_to_the_customer_appropriately__c  ,  &quot;2&quot;),2, if(ispickval( React_to_the_customer_appropriately__c  , &quot;1&quot;),1,0))+ 

IF(ISPICKVAL(   Don_t_leave_long_pauses__c,  &quot;2&quot;),2, if(ispickval( Don_t_leave_long_pauses__c , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   Use_the_client_s_name_thoughout_the_chat__c,  &quot;2&quot;),2, if(ispickval( Use_the_client_s_name_thoughout_the_chat__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   Avoid_using_jargon_and_specific_terms__c , &quot;2&quot;),2, if(ispickval(Avoid_using_jargon_and_specific_terms__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   Use_appropriate_sign_off__c  ,  &quot;2&quot;),2, if(ispickval( Use_appropriate_sign_off__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   Offeradditionalassistance__c  ,  &quot;2&quot;),2, if(ispickval( Offeradditionalassistance__c  , &quot;1&quot;),1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveChatCalcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveChatPercentage__c</fullName>
        <formula>LiveChatCalcs__c / LiveChatTotalPointsAvailable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveChatPercentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LiveChatTotalPointsAvailable__c</fullName>
        <formula>IF(ISPICKVAL(  Explanations_are_clear_and_in_sections__c , &quot;N/A&quot;),0,2 )+ 
IF(ISPICKVAL( Provide_relevant_information__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Explain_the_importance_of_actions__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Provide_rationale_behind_why_we_require__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Explain_how_to_take_actions_online__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Use_correct_grammar_and_spelling__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Use_positive_and_professional_language__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Use_appropriate_tone_of_voice__c, &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( React_to_the_customer_appropriately__c , &quot;N/A&quot;),0,2)+ 

IF(ISPICKVAL( Don_t_leave_long_pauses__c, &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Use_the_client_s_name_thoughout_the_chat__c, &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Avoid_using_jargon_and_specific_terms__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Use_appropriate_sign_off__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Offeradditionalassistance__c , &quot;N/A&quot;),0,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveChatTotalPointsAvailable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make_relevant_notes2__c</fullName>
        <inlineHelpText>Make relevant notes</inlineHelpText>
        <label>Make relevant notes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Make_relevant_notesYNNA__c</fullName>
        <label>Make relevant notes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Makerelevantnotes__c</fullName>
        <label>Make relevant notes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mention_of_agents_name__c</fullName>
        <label>Mention of agents name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentioned_the_company_name__c</fullName>
        <label>Mentioned the company name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentioned_your_name__c</fullName>
        <inlineHelpText>Mentioned your name</inlineHelpText>
        <label>Mentioned your name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obtain_consent_to_change_personal_info__c</fullName>
        <inlineHelpText>Obtain consent to change personal information</inlineHelpText>
        <label>Obtain consent to change personal info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obtain_consent_to_change_personal_inform__c</fullName>
        <inlineHelpText>Obtain consent to change personal information</inlineHelpText>
        <label>Obtain consent to change personal inform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_additionalAssistance__c</fullName>
        <inlineHelpText>Offer additional assistance</inlineHelpText>
        <label>Offer additional assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_additional_assistance__c</fullName>
        <inlineHelpText>Offer additional assistance</inlineHelpText>
        <label>Offer additional assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_all_relevant_information__c</fullName>
        <inlineHelpText>Offer all relevant information</inlineHelpText>
        <label>Offer all relevant information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offeradditionalassistance__c</fullName>
        <label>Offer additional assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perform_necessary_DPA_checks__c</fullName>
        <inlineHelpText>Perform necessary DPA checks</inlineHelpText>
        <label>Perform necessary DPA checks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performs_all_tasks_relevant_to_the_query__c</fullName>
        <inlineHelpText>Performs all tasks relevant to the query</inlineHelpText>
        <label>Performs all tasks relevant to the query</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_and_polite_communication__c</fullName>
        <inlineHelpText>Professional and polite communication with no use of jargon</inlineHelpText>
        <label>Professional and polite communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provide_a_solution__c</fullName>
        <inlineHelpText>Provide a solution</inlineHelpText>
        <label>Provide a solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provide_customer_with_clear_explanation__c</fullName>
        <inlineHelpText>Provide the customer with clear and confident explanations delivered in sections</inlineHelpText>
        <label>Provide customer with clear explanation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provide_rationale_behind_why_we_require__c</fullName>
        <inlineHelpText>Provide rationale behind why we require certain information</inlineHelpText>
        <label>Provide rationale behind why we require</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provide_relevant_information__c</fullName>
        <inlineHelpText>Provide relevant information</inlineHelpText>
        <label>Provide relevant information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provide_the_customer_with_clear_explanat__c</fullName>
        <inlineHelpText>Provide the customer with clear and confident
explanations</inlineHelpText>
        <label>Provide the customer clear explanation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provides_a_solution__c</fullName>
        <inlineHelpText>Provides a solution</inlineHelpText>
        <label>Provides a solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provides_customer_with_clear_explanation__c</fullName>
        <inlineHelpText>Provides the customer with clear and confident explanations delivered in sections</inlineHelpText>
        <label>Provides customer with clear explanation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>React_to_customer__c</fullName>
        <inlineHelpText>React to the customer</inlineHelpText>
        <label>React to customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>React_to_the_customer__c</fullName>
        <inlineHelpText>React to the customer</inlineHelpText>
        <label>React to the customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>React_to_the_customer_appropriately__c</fullName>
        <inlineHelpText>React to the customer appropriately</inlineHelpText>
        <label>React to the customer appropriately</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Read_compliance_scripts_when_required__c</fullName>
        <inlineHelpText>Read compliance scripts when required</inlineHelpText>
        <label>Read compliance scripts when required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_to_Senior_UW_correct_notes__c</fullName>
        <inlineHelpText>Referred to Senior UW - correct notes added</inlineHelpText>
        <label>Referred to Senior UW - correct notes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_to_Senior_UW_were_the_correct__c</fullName>
        <inlineHelpText>Referred to Senior UW - were the correct notes added?</inlineHelpText>
        <label>Referred to Senior UW - were the correct</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Se_realistic_timescales_when_applicable__c</fullName>
        <inlineHelpText>Set realistic timescales when applicable</inlineHelpText>
        <label>Set realistic timescales When applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Set_realistic_timescales_when_applicable__c</fullName>
        <inlineHelpText>Set realistic timescales when applicable</inlineHelpText>
        <label>Set realistic timescales when applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SoftSkillsScore__c</fullName>
        <formula>IF(ISPICKVAL( Email_states_correct_documents_needed__c , &quot;2&quot;),2, if(ispickval( Email_states_correct_documents_needed__c , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL( Email_states_why_documents_unacceptable__c , &quot;2&quot;),2, if(ispickval( Email_states_why_documents_unacceptable__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL( Professional_and_polite_communication__c , &quot;2&quot;),2, if(ispickval( Professional_and_polite_communication__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL( Use_correct_grammar_and_punctuation__c , &quot;2&quot;),2, if(ispickval( Use_correct_grammar_and_punctuation__c, &quot;1&quot;),1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SoftSkillsScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_notes_clear_and_accurate__c</fullName>
        <inlineHelpText>Task notes clear and accurate</inlineHelpText>
        <label>Task notes clear and accurate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>The_chat_was_compliant__c</fullName>
        <label>The chat was compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_appropriate_greeting__c</fullName>
        <inlineHelpText>Use appropriate greeting (morning, afternoon)</inlineHelpText>
        <label>Use appropriate greeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_appropriate_sign_off__c</fullName>
        <inlineHelpText>Use appropriate sign off</inlineHelpText>
        <label>Use appropriate sign off</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_appropriate_tone_of_voice__c</fullName>
        <inlineHelpText>Use appropriate tone of voice in line with email correspondence.</inlineHelpText>
        <label>Use appropriate tone of voice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_correct_grammar_and_punctuation__c</fullName>
        <inlineHelpText>Use correct grammar and punctuation</inlineHelpText>
        <label>Use correct grammar and punctuation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_correct_grammar_and_spelling__c</fullName>
        <inlineHelpText>Use the correct grammar and spelling</inlineHelpText>
        <label>Use correct grammar and spelling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_correct_grammar_spelling_phrasing__c</fullName>
        <inlineHelpText>Uses correct grammar, spelling and phrasing</inlineHelpText>
        <label>Use correct grammar spelling &amp; phrasing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
</CustomObject>